modified playbook n inventory

--- a/inventory.ini
+++ b/inventory.ini
@@ -2,3 +2,10 @@
 192.168.0.12 ansible_user=osboxes ansible_password=1234 ansible_become_password=1234
 192.168.0.13 ansible_user=osboxes ansible_password=1234 ansible_become_password=1234
 192.168.0.14 ansible_user=osboxes ansible_password=1234 ansible_become_password=1234
+
+[prod]
+192.168.0.12 ansible_user=osboxes ansible_password=1234 ansible_become_password=1234
+192.168.0.13 ansible_user=osboxes ansible_password=1234 ansible_become_password=1234
+
+[dev]
+192.168.0.14 ansible_user=osboxes ansible_password=1234 ansible_become_password=1234
