--- a/inventory.ini
+++ b/inventory.ini
@@ -1,4 +1,4 @@
 [all]
-192.168.0.12 ansible_user=osboxes ansible_password=1234 ansible_become_password=1234
-192.168.0.13 ansible_user=osboxes ansible_password=1234 ansible_become_password=1234
-192.168.0.14 ansible_user=osboxes ansible_password=1234 ansible_become_password=1234
+192.168.0.12 ansible_user=osboxes 
+192.168.0.13 ansible_user=osboxes 
+192.168.0.14 ansible_user=osboxes
